# scalar-relayer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
config/: evm_relayer1.toml  evm_relayer2.toml
examples/: call_smartcontract.rs  call_smartcontract_ether.rs  call_smartcontract_stackoverflow.rs  create_payload.rs
solidity/: hardhat.config.js  package-lock.json  package.json
solidity/cache/: solidity-files-cache.json
solidity/contracts/: AxelarGatewayProxy.sol  ERC20.sol
solidity/contracts/custom/: MessageReceiver.sol  MessageSender.sol
solidity/contracts/gas-service/: AxelarGasReceiverProxy.sol  AxelarGasServiceProxy.sol
src/: lib.rs  main.rs  mock.rs  types.rs
src/abis/: axelar_auth_weighted.rs  axelar_executable.rs  axelar_gateway.rs  axelar_gateway_proxy.rs  executable_sample.rs  message_receiver.rs  message_sender.rs  mod.rs  scalar_auth_weighted.rs  scalar_gateway.rs  scalar_gateway_proxy.rs
src/config/: mod.rs
src/grpc/: mod.rs
src/proto/: abci.rs  mod.rs
src/relayer/: evm.rs  mod.rs  signature.rs  types.rs
tests/: lib.rs  tss.rs
